# TurnBasedCombatSimulator

./: .gitignore  CMakeLists.txt  README.md  character.cpp  character.h  combat_system.cpp  combat_system.h  main.cpp  main.h  team.cpp  team.h
Tests/: test_character.cpp
include/: character.h  combat_logger.h  combat_system.h  constants.h  damage_system.h  effect.h  fwd_decl.h  main.h  poison_effect.h  regen_effect.h  team.h  weakness_effect.h
include/effects/: effect.h  poison_effect.h  regen_effect.h  weakness_effect.h
src/: character.cpp  combat_logger.cpp  combat_system.cpp  damage.cpp  damage_system.cpp  main.cpp  poison_effect.cpp  team.cpp
src/effects/: poison.cpp
tests/: test_character.cpp  test_combat_system.cpp  test_effect.cpp  test_poison_effect.cpp  test_team.cpp
